samples/_failures_safe/1761659078_749674_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d308744a.c: In function ‘event_to_string’:
./samples/SAFE/__tmp_d308744a.c:157:39: error: missing terminating " character
  157 |         case EVENT_DATA_READY: return "DATA_
      |                                       ^~~~~~
./samples/SAFE/__tmp_d308744a.c:157:9: error: expected expression at end of input
  157 |         case EVENT_DATA_READY: return "DATA_
      |         ^~~~
./samples/SAFE/__tmp_d308744a.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d308744a.c:157:9: error: expected declaration or statement at end of input
